src/FinancialForce Accounting/objects/codaIntercompanyTransferLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpintercompanytransfer</customHelpPage>
    <description>Intercompany transfer detail records.</description>
    <fields>
        <fullName>AccountAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Analysis</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Account Analysis)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsForAnalysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Account)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account - Customer</fullName>
                </value>
                <value>
                    <fullName>Account - Vendor</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Product - Purchases</fullName>
                </value>
                <value>
                    <fullName>Product - Sales</fullName>
                </value>
                <value>
                    <fullName>Tax Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Analysis</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Product Analysis)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsForAnalysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceDocumentPaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Transfer Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Intercompany Transfer Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transfer Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>